; ModuleID = '/home/carl/AnghaBench/radare2/libr/debug/p/native/windows/extr_windows_debug.c_w32_pid_list.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/debug/p/native/windows/extr_windows_debug.c_w32_pid_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32* }
%struct.TYPE_11__ = type { i32, i32, i32, i32 }

@TH32CS_SNAPPROCESS = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [38 x i8] c"w32_pid_list/CreateToolhelp32Snapshot\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"w32_pid_list/Process32First\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @w32_pid_list(%struct.TYPE_10__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_11__, align 4
  %10 = alloca %struct.TYPE_9__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %14 = load i32, i32* @TH32CS_SNAPPROCESS, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @w32_CreateToolhelp32Snapshot(i32 %14, i32 %15)
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %3
  %21 = call i32 @r_sys_perror(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %22 = load i32*, i32** %7, align 8
  store i32* %22, i32** %4, align 8
  br label %84

23:                                               ; preds = %3
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  store i32 16, i32* %24, align 4
  %25 = load i64, i64* %8, align 8
  %26 = call i64 @Process32First(i64 %25, %struct.TYPE_11__* %9)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %78

28:                                               ; preds = %23
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %30, align 8
  store %struct.TYPE_9__* %31, %struct.TYPE_9__** %10, align 8
  %32 = load i32, i32* %6, align 4
  %33 = icmp eq i32 %32, 0
  %34 = zext i1 %33 to i32
  store i32 %34, i32* %11, align 4
  store i32 0, i32* %12, align 4
  br label %35

35:                                               ; preds = %73, %28
  %36 = load i32, i32* %11, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %49, label %38

38:                                               ; preds = %35
  %39 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* %6, align 4
  %42 = icmp eq i32 %40, %41
  br i1 %42, label %49, label %43

43:                                               ; preds = %38
  %44 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 2
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %6, align 4
  %47 = icmp eq i32 %45, %46
  %48 = zext i1 %47 to i32
  store i32 %48, i32* %12, align 4
  br i1 %47, label %49, label %72

49:                                               ; preds = %43, %38, %35
  %50 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* %12, align 4
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %59

54:                                               ; preds = %49
  %55 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %56 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  br label %60

59:                                               ; preds = %49
  br label %60

60:                                               ; preds = %59, %54
  %61 = phi i32* [ %58, %54 ], [ null, %59 ]
  %62 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 3
  %63 = load i32, i32* %62, align 4
  %64 = call i32* @__build_debug_pid(i32 %51, i32* %61, i32 %63)
  store i32* %64, i32** %13, align 8
  %65 = load i32*, i32** %13, align 8
  %66 = icmp ne i32* %65, null
  br i1 %66, label %67, label %71

67:                                               ; preds = %60
  %68 = load i32*, i32** %7, align 8
  %69 = load i32*, i32** %13, align 8
  %70 = call i32 @r_list_append(i32* %68, i32* %69)
  br label %71

71:                                               ; preds = %67, %60
  br label %72

72:                                               ; preds = %71, %43
  br label %73

73:                                               ; preds = %72
  %74 = load i64, i64* %8, align 8
  %75 = call i64 @Process32Next(i64 %74, %struct.TYPE_11__* %9)
  %76 = icmp ne i64 %75, 0
  br i1 %76, label %35, label %77

77:                                               ; preds = %73
  br label %80

78:                                               ; preds = %23
  %79 = call i32 @r_sys_perror(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  br label %80

80:                                               ; preds = %78, %77
  %81 = load i64, i64* %8, align 8
  %82 = call i32 @CloseHandle(i64 %81)
  %83 = load i32*, i32** %7, align 8
  store i32* %83, i32** %4, align 8
  br label %84

84:                                               ; preds = %80, %20
  %85 = load i32*, i32** %4, align 8
  ret i32* %85
}

declare dso_local i64 @w32_CreateToolhelp32Snapshot(i32, i32) #1

declare dso_local i32 @r_sys_perror(i8*) #1

declare dso_local i64 @Process32First(i64, %struct.TYPE_11__*) #1

declare dso_local i32* @__build_debug_pid(i32, i32*, i32) #1

declare dso_local i32 @r_list_append(i32*, i32*) #1

declare dso_local i64 @Process32Next(i64, %struct.TYPE_11__*) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
